<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_500"
    tools:context=".ui.detail.tvshow.DetailTvShow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/backdrop_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_movie_24"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.legacy.widget.Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_backdrop" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space"
            app:shapeAppearanceOverlay="@style/RoundImageView"
            tools:src="@color/white" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/img_backdrop"
            tools:text="The Flash" />

        <com.ramijemli.percentagechartview.PercentageChartView
            android:id="@+id/chart_popularity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:pcv_animDuration="800"
            app:pcv_animInterpolator="anticipate_overshoot"
            app:pcv_backgroundBarColor="@color/primary_700"
            app:pcv_backgroundBarThickness="6dp"
            app:pcv_mode="ring"
            app:pcv_orientation="clockwise"
            app:pcv_progress="0"
            app:pcv_progressBarThickness="5dp"
            app:pcv_progressColor="@color/gold"
            app:pcv_startAngle="270" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chart_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Date Release"/>

        <TextView
            android:id="@+id/tv_latest_episode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chart_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:text="Episode Run"/>

        <TextView
            android:id="@+id/tv_synopsis_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/synopsis_title"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster" />

        <TextView
            android:id="@+id/tv_synopsis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_title"
            tools:text="Lorem ipsum dolor sit amet" />

        <TextView
            android:id="@+id/tv_more_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/more_information_title"
            android:textColor="@color/gold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_synopsis" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/original_title"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_more_title" />

        <TextView
            android:id="@+id/tv_original"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_title"
            tools:text="The Flash"/>

        <TextView
            android:id="@+id/tv_genre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/genre"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_original" />

        <LinearLayout
            android:id="@+id/ll_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre_title">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_language_title">
        </LinearLayout>

        <TextView
            android:id="@+id/tv_language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_genre" />

        <TextView
            android:id="@+id/tv_season_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/season"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_language" />

        <TextView
            android:id="@+id/tv_season"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_season_title"
            tools:text="10"/>

        <TextView
            android:id="@+id/tv_episode_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/episode"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_season" />

        <TextView
            android:id="@+id/tv_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_episode_title"
            tools:text="20"/>

        <TextView
            android:id="@+id/tv_homepage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/home_page"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_episode" />

        <TextView
            android:id="@+id/tv_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_homepage_title"
            tools:text="Lorem ipsum dolor sit amet"/>

        <TextView
            android:id="@+id/tv_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_homepage" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status_title"
            tools:text="End"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_home_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/huegreen"
            android:text="@string/home_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>