...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chart_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Date Release"/>

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
...
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_homepage_title"
            tools:text="Lorem ipsum dolor sit amet"/>

        <TextView
            android:id="@+id/tv_budget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/budget"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_homepage" />

        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_budget_title"
            tools:text="$100.000.000"/>

        <TextView
            android:id="@+id/tv_revenue_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/revenue"
            android:textStyle="bold"
            android:textColor="@color/gainsboro"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_budget" />

        <TextView
            android:id="@+id/tv_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/gainsboro"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
...
